test_suite/tests/ui/with-variant/skip_ser_struct_field.stderr
error: variant `Struct` cannot have both #[serde(serialize_with)] and a field `f1` marked with #[serde(skip_serializing)]
  --> tests/ui/with-variant/skip_ser_struct_field.rs:5:5
   |
3  |   #[derive(Serialize)]
   |            --------- in this derive macro expansion
4  |   enum Enum {
5  | /     #[serde(serialize_with = "serialize_some_other_variant")]
6  | |     Struct {
7  | |         #[serde(skip_serializing)]
8  | |         f1: String,
9  | |         f2: u8,
10 | |     },
   | |_____^
   |
   = note: this error originates in the derive macro `Serialize` (in Nightly builds, run with -Z macro-backtrace for more info)
